Fix parsing of request Cookie header
Fixes #43